--- a/src/lab/exp3/index2.html
+++ b/src/lab/exp3/index2.html
@@ -82,14 +82,14 @@ margin-top:-1px;
 <div class="breadcrumb" id="experiment-article-breadcrumb"><font color="white"><a href="../../index.html">Home</a><a></a> &gt; <a href="../index.html"> Fluid Mechanics Lab</a> &gt; <a href="index.html">
             
 
-    Impact Of Jet
+    Impact of Jet
 
 
             </a></font></div>
             <header class="heading" id="experiment-article-heading">
            
 
-	Impact Of Jet
+	Impact of Jet
 
 
             </header>
