--- a/src/lab/exp5/index2.html
+++ b/src/lab/exp5/index2.html
@@ -80,10 +80,10 @@ margin-top:-1px;
 
            
 <div class="breadcrumb" id="experiment-article-breadcrumb"><font color="white"><a href="../index.html">Home</a><a></a> &gt; <a href="../index.html"> Fluid Mechanics Lab</a> &gt; <a href="index.html">
-            Venturi Meter 
+            Venturimeter 
             </a></font></div>
             <header class="heading" id="experiment-article-heading">
-            Venturi Meter 
+            Venturimeter 
             </header>
 
  </article >
