--- a/src/lab/exp5/default.html
+++ b/src/lab/exp5/default.html
@@ -38,7 +38,7 @@ should edt the content.html file to suit our requirements. -->
             <header class="heading" id="experiment-article-heading">
                 <!-- You can add a welcome message or title of the 
         experiment here -->
-                Venturi Meter 
+                Venturimeter 
                 <!-- Add any additional element if required with proper 
         enclosing-->
             </header><!-- Navigation menu is useful to organize the view of 
