--- a/src/lab/images/simulation/impact of jet_final/index.html
+++ b/src/lab/images/simulation/impact of jet_final/index.html
@@ -186,8 +186,8 @@ var inclined=[[10,15,20],
 <img id="can5-2a" style="position: absolute; left:26px; top: 124px; cursor:zoom-in; visibility:hidden;" src="images/3a.png"/>
 <img id="can5-2" style="position: absolute; left:21px; top: 123.25px; visibility:hidden;" src="images/4.png"/>
 
-<img id="can5-8w" style="position: absolute; left: 156px; top: 188.5px;  visibility:hidden;" src="Images/wat.png">
-<img id="can5-8wh" style="position: absolute; left: 145px; top: 187px; visibility:hidden;" src="Images/wathemi.png">
+<img id="can5-8w" style="position: absolute; left: 156px; top: 188.5px;  visibility:hidden;" src="images/wat.png">
+<img id="can5-8wh" style="position: absolute; left: 145px; top: 187px; visibility:hidden;" src="images/wathemi.png">
 
 <img id="can5-11" style="position: absolute; left:395px; top: 440px; visibility:hidden;" src="images/water.png"/>
 
@@ -201,15 +201,15 @@ var inclined=[[10,15,20],
 
 <img id="can5-5" style="position: absolute; left:78.85px; top: 311.5px; cursor:zoom-in;" src="images/inletvalve.png"/>
 
-<img id="can5-6" style="position: absolute; left: 550px; top: 230px; visibility:hidden;" src="Images/pipe.png">
-<img id="can5-7" style="position: absolute; left: 545px; top: 267px; visibility:hidden; cursor:pointer;" src="Images/hand3.png">
+<img id="can5-6" style="position: absolute; left: 550px; top: 230px; visibility:hidden;" src="images/pipe.png">
+<img id="can5-7" style="position: absolute; left: 545px; top: 267px; visibility:hidden; cursor:pointer;" src="images/hand3.png">
 
 
-<img id="can5-8wf" style="position: absolute; left: 156px; top: 186.5px;  visibility:hidden;" src="Images/watflat.png">
+<img id="can5-8wf" style="position: absolute; left: 156px; top: 186.5px;  visibility:hidden;" src="images/watflat.png">
 
-<img id="can5-8wi" style="position: absolute; left: 156px; top: 182px; visibility:hidden;" src="Images/watincli.png">
+<img id="can5-8wi" style="position: absolute; left: 156px; top: 182px; visibility:hidden;" src="images/watincli.png">
 
-<img id="can5-9" style="position: absolute; left: 222.10px; top: 272.99px; visibility:hidden;" src="Images/waterpipe.png">
+<img id="can5-9" style="position: absolute; left: 222.10px; top: 272.99px; visibility:hidden;" src="images/waterpipe.png">
 
 <img id="can5-10a" style="position: absolute; left:355px; top: 115px; cursor:pointer; visibility:hidden;" src="images/3.png"/>
 <img id="can5-10b" style="position: absolute; left:400px; top: 120.50px; cursor:pointer; visibility:hidden;" src="images/3.1.png"/>
@@ -227,8 +227,8 @@ var inclined=[[10,15,20],
 <img id="can6-2" style="position: absolute; left:1px; top: 123.25px;  visibility:hidden;" src="images/4.png"/>
 <img id="can6-2a" style="position: absolute; left:6px; top: 124px;  visibility:hidden;" src="images/3a.png"/>
 
-<img id="can6-8w" style="position: absolute; left: 136px; top: 188.5px;  visibility:hidden;" src="Images/wat.png">
-<img id="can6-8wh" style="position: absolute; left: 125px; top: 187px; visibility:hidden;" src="Images/wathemi.png">
+<img id="can6-8w" style="position: absolute; left: 136px; top: 188.5px;  visibility:hidden;" src="images/wat.png">
+<img id="can6-8wh" style="position: absolute; left: 125px; top: 187px; visibility:hidden;" src="images/wathemi.png">
 
 <img id="can6-10" style="position: absolute; left:374px; top: 451px; visibility:hidden;" src="images/water.png"/>
 
@@ -238,21 +238,21 @@ var inclined=[[10,15,20],
 <img id="can6-6" style="position: absolute; left:129.25px; top: 120px;  visibility:hidden;" src="images/5.png"/>
 <img id="can6-3" style="position: absolute; left:192.50px; top: 120.55px;  visibility:hidden;" src="images/2.2.png"/>
 
-<img id="can6-8wf" style="position: absolute; left: 136px; top: 186.5px;  visibility:hidden;" src="Images/watflat.png">
-<img id="can6-8wi" style="position: absolute; left: 136px; top: 182px; visibility:hidden;" src="Images/watincli.png">
+<img id="can6-8wf" style="position: absolute; left: 136px; top: 186.5px;  visibility:hidden;" src="images/watflat.png">
+<img id="can6-8wi" style="position: absolute; left: 136px; top: 182px; visibility:hidden;" src="images/watincli.png">
 
 <img id="can6-out" style="position: absolute; left:334px; top: 405px; visibility:hidden; cursor:pointer;" src="images/outlet_on.png"/>
 <img id="can6-outoff" style="position: absolute; left:334px; top: 405px; visibility:hidden;" src="images/outlet_off.png"/>
 
-<img id="can6-4" style="position: absolute; left: 403px; top: 365px; visibility:hidden;" src="Images/wtrblu.png">
-<img id="can6-5" style="position: absolute; left: 403px; top: 380px;" src="Images/wtrblank.png">
-<img id="can6-6" style="position: absolute; left: 403px; top: 95px;" src="Images/measuring tube.png">
+<img id="can6-4" style="position: absolute; left: 403px; top: 365px; visibility:hidden;" src="images/wtrblu.png">
+<img id="can6-5" style="position: absolute; left: 403px; top: 380px;" src="images/wtrblank.png">
+<img id="can6-6" style="position: absolute; left: 403px; top: 95px;" src="images/measuring tube.png">
 
-<img id="can6-7" style="position: absolute; left: 499px; top: 170px;" src="Images/stopwatch.png"/>
-<img id="can6-8" style="position: absolute; left: 567px; top: 241px;" src="Images/needle.png"/>
+<img id="can6-7" style="position: absolute; left: 499px; top: 170px;" src="images/stopwatch.png"/>
+<img id="can6-8" style="position: absolute; left: 567px; top: 241px;" src="images/needle.png"/>
 
 
-<img id="can6-9" style="position: absolute; left: 202.10px; top: 272.99px; " src="Images/waterpipe.png">
+<img id="can6-9" style="position: absolute; left: 202.10px; top: 272.99px; " src="images/waterpipe.png">
 
 
 
