--- a/src/lab/index.html
+++ b/src/lab/index.html
@@ -40,7 +40,7 @@ coming from the above style sheets. -->
 <style>
 nav#lab-article-navigation ul li a:link, nav#experiment-article-navigation ul li a:link, nav#lab-article-navigation ul li a:visited, nav#experiment-article-navigation ul li a:visited 
 {
-    color: #02568e;
+    color: grey;
     text-decoration: underline;
     float: right;
     font-size: 16px;
