--- a/src/lab/exp1/index.html
+++ b/src/lab/exp1/index.html
@@ -228,6 +228,6 @@ $(document).ready(function()
     <!-- ******** ADD/OVERRIDE JAVASCRIPT FILES HERE ********* -->
     <!-- ***************************************************** -->
 
-<div id="footer" style="text-align:center; width:100%; color:white">Copyright &copy 2016 SOLVE - The Virtual Lab at NITK Surathkal</div>
+<div id="footer" style="text-align:center; width:100%; color:white">Copyright &copy 2016 - 2020 SOLVE - The Virtual Lab at NITK Surathkal</div>
 </body>
 </html>
