--- a/src/lab/exp5/index2.html
+++ b/src/lab/exp5/index2.html
@@ -132,6 +132,6 @@ margin: 15px 0px 10px;font-weight: bold;" class="quizLevel"><strong>Our Opinion:
        
         <script src="se/slickQuiz.js"></script>
         <script src="se/master.js"></script>
-   <div id="footer" style="text-align:center; width:100%; color:white; margin-left:100px">Copyright &copy 2016 SOLVE - The Virtual Lab at NITK Surathkal</div>
+   <div id="footer" style="text-align:center; width:100%; color:white; margin-left:100px">Copyright &copy 2016 - 2020 SOLVE - The Virtual Lab at NITK Surathkal</div>
     </body>
 </html>
