--- a/src/lab/images/simulation/rectangular_notch/index.html
+++ b/src/lab/images/simulation/rectangular_notch/index.html
@@ -8,11 +8,12 @@
 <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>-->
 <script type="text/javascript" src= "jquery-1.7.1.min.js"></script>
 <script type="text/javascript" src= "rvnotch.js"></script>
+ <link href="mathstyle.css" rel="stylesheet" />
 
 <script>
 var simsubscreennum=0;
 var temp=0;
-var lnt=0;
+<!-- var lnt=0; -->
 var values=[[4.6,13.36,8.76,5.87,17.45,11.58,13.348,6466.08,10219.52,0.6327],
 			[4.6,12.26,7.66,5.87,16.5,10.63,13.568,5220.39,8494.1,0.6146],
 			[4.6,11.36,6.76,5.87,15.79,9.92,13.748,4391.87,7135.39,0.6155],
@@ -26,7 +27,7 @@ var values=[[4.6,13.36,8.76,5.87,17.45,11.58,13.348,6466.08,10219.52,0.6327],
 
 
 
-<body style="margin:0">
+<body  onload="select.reset();" style="margin:0;">
 <!--Simulation Screen start		-->
 <div id="simscreen">
 
@@ -35,22 +36,18 @@ var values=[[4.6,13.36,8.76,5.87,17.45,11.58,13.348,6466.08,10219.52,0.6327],
 
 <!--SubScreen Home	-->	
 <div class="simsubscreen" id="canvas0">
-<h4 class="incanvas" >Objective</h4>
-<p class="incanvas" >To determine the coeffcient of discharge of a rectangular notch.</p>
-<h4 class="incanvas" >Apparatus used:</h4>
+<h3 class="incanvas" >Objective:</h3>
+<p class="incanvas" >To determine the coeffcient of discharge of a rectangular notch.</p></br>
+<h3 class="incanvas" >Apparatus used:</h3>
 <p class="incanvas" >Rectangular notch, V-notch, hook gauge, measuring scale etc.</p>
-<img id="" style="position: absolute; left: 230px; top: 125px;" src="Images/1.png"/>
+<img id="" style="position: absolute; left: 180px; top: 125px;" src="Images/1.png"/>
 </div>
 
-
-
-
 <!--Step1	-->	
-
 <div class="simsubscreen" id="canvas1" style="visibility:hidden">
-<strong id="titlestep" class="incanvas">STEP </strong>
+<strong id="titlestep" class="incanvas">STEP</strong>
 <span class="circlebg" id="stepnumber">&nbsp;1&nbsp;</span>
-<p id="pumptext" class="steptext"> Start the pump by pressing start button.</p>
+<p id="pumptext" class="steptext">Start the pump by pressing start button.</p>
 
 <img id="can1-1" style="position: absolute; left: 50px; top: 130px;" src="Images/1.1.png">
 <img id="can1-2" style="position: absolute; left: 600px; top: 125px;" src="Images/board.png">
@@ -58,91 +55,107 @@ var values=[[4.6,13.36,8.76,5.87,17.45,11.58,13.348,6466.08,10219.52,0.6327],
 <img id="can1off" style="position: absolute; left: 635px; top: 185px;" src="Images/off.png">
 <img id="onarm" src="Images/hand.png" style="margin-left: -50px; margin-top: -50px; position: absolute; visibility: hidden; left: 689px; top: 215px;">
 
-
-
 </div>
+
 <!--Step2	-->	
-
 <div class="simsubscreen" id="canvas2" style="visibility:hidden">
-
-<strong id="titlestep" class="incanvas">STEP &nbsp;</strong>
+<strong id="titlestep" class="incanvas">STEP</strong>
 <span class="circlebg" id="stepnumber">&nbsp;2&nbsp;</span>
-<p id="pumptext-2" class="steptext">&nbsp;Open the inlet valve and allow the water to fill in the channel till crest level.</p>
+<p id="pumptext-2" class="steptext">Open the inlet valve and allow the water to fill in the channel till crest level.</p>
 <img id="can2-1" style="position: absolute; left: 50px; top: 130px;" src="Images/1.1.png">
 <img id="can2-2" style="position: absolute; left: 550px; top: 130px;" src="Images/Inlet valve_horizontal_1.png">
 <img id="can2-3" style="position: absolute; left: 545px; top: 167px;" src="Images/Inlet valve_horizontal.png">
 <img id="can2-4" style="position: absolute; left: 284px; top: 146px;cursor:zoom-in;" src="Images/nob2.png"/>
-
-
-
-
-
 </div>
 
 <!--Step3	-->	
 <div class="simsubscreen" id="canvas3" style="visibility:hidden">
-<strong class="incanvas">STEP &nbsp;</strong><span class="circlebg">&nbsp;3&nbsp;</span>
-<p class="steptext">&nbsp;Note the theoretical discharge of the rectangular notch.</p>
+<strong class="incanvas">STEP</strong>
+<span class="circlebg">&nbsp;3&nbsp;</span>
+<p class="steptext">Note the theoretical discharge of the rectangular notch.</p>
 
-<img id="can3-1" style="position: absolute; left: 0px; top: 125px;" src="Images/1.1.png"/>
-<img id="can3-5" style="position: absolute; left: 300px; top: 355px;" src="Images/coverblue.png"/>
-<img id="can3-13" style="position: absolute; left: 300px; top: 375px;" src="Images/coverblue.png"/>
-<img id="can3-2" style="position: absolute; left: 300px; top: 195px;" src="Images/hookgauge4.png"/>
+<img id="can3-1" style="position: absolute; left: -20px; top: 125px;" src="Images/1.1.png"/>
 
-<img id="can3-3" style="position: absolute; left: 345px; top: 109px;" src="Images/hookgauge2.png"/>
+<img id="can3-5" style="position: absolute; left: 250px; top: 355px;" src="Images/coverblue.png"/>
+<img id="can3-13" style="position: absolute; left: 250px; top: 375px;" src="Images/coverblue.png"/>
+<img id="can3-2" style="position: absolute; left: 250px; top: 195px;" src="Images/hookgauge4.png"/>
+<img id="can3-3" style="position: absolute; left: 295px; top: 109px;" src="Images/hookgauge2.png"/>
+<img id="can3-4" style="position: absolute; left: 250px; top: 45px;" src="Images/cover2.png"/>
+<img id="can3-6" style="position: absolute; left: 250px; top: 375px;" src="Images/cover.png"/>
 
-<img id="can3-4" style="position: absolute; left: 300px; top: 45px;" src="Images/cover2.png"/>
+<img id="can3-7" style="position: absolute; left: 176px; top: 137px;cursor:crosshair;" src="Images/vnt.png"/>
 
-<img id="can3-6" style="position: absolute; left: 300px; top: 375px;" src="Images/cover.png"/>
+<p id="can3-9" style="position:absolute; top: 220px; left:370px">Initial reading (water level till crest) = 4.6 cm</p>
 
-<img id="can3-7" style="position: absolute; left: 196px; top: 137px;cursor:crosshair;" src="Images/vnt.png"/>
+<p id="can3-10" style="position:absolute; top: 260px; left:370px; visibility:hidden;">Final reading = </p>
 
-<p id="can3-9" style="position:absolute;top: 260px; left:420px"> Initial reading (water level till crest) = 4.6 cm</p>
-<p id="can3-10" style="position:absolute;top: 290px; left:420px"> Final reading = </p>
-<p id="can3-11" style="position:absolute;top: 320px; left:420px"> Head of water =  </p>
-<p id="can3-12" style="position:absolute;top:350px; left:420px"> Theoretical  discharge, Q<sub>th</sub> =  </p>
+<div class="tooltip" style="position:absolute; top: 300px; left:370px; visibility:hidden;">
+	<p id="can3-11" >Head of water, H =  </p>
+	<span id="fcan3-11" class="tooltiptext" >Head of water, H(cm) = Final reading - Initial reading</span>
+</div> 
 
+<span id="ap1" class="ttip" style="border-bottom:1px dotted ; color:red; position:absolute; left:370px; top:390px; text-align:justify; visibility:hidden;">Additional parameters
+<span  class="ttiptext" style="text-align:-webkit-justify;">Length of rectangular notch (L) = 15.1 cm</br></br>Number of end contractions (n) = 2</br></br>Acceleration due to gravity (g) = 981 cm/s<sup>2</sup></span></span>
 
+<div class="tooltip" style="position:absolute; top: 340px; left:370px; visibility:hidden;">
+	<p id="can3-12" >Theoretical discharge, Q<sub>th</sub> = </p>
+	<span id="fcan3-12" class="tooltiptext" ><p>Q<sub>th</sub> = <span class="frac"><sup>2</sup><span>&frasl;</span><sub>3</sub></span> &times; (L - 0.1nH) &times; &radic;2g &times; H<sup><sup><sup><span class="frac"><sup>3</sup><span>&frasl;</span><sub>2</sub></sup></sup></sup></span></p></span>
+</div> 
 </div>
 
 <!--Step4	-->	
 <div class="simsubscreen" id="canvas4" style="visibility:hidden">
-<strong class="incanvas">STEP &nbsp;</strong><span class="circlebg">&nbsp;4&nbsp;</span>
-<p class="steptext">&nbsp;Note the discharge reading of the V-notch.</p>
+<strong class="incanvas">STEP</strong>
+<span class="circlebg">&nbsp;4&nbsp;</span>
+<p class="steptext">Note the discharge reading of the V-notch.</p>
 
-<img id="can4-1" style="position: absolute; left: 0px; top: 125px;" src="Images/1.1.png"/>
-<img id="can4-5" style="position: absolute; left: 300px; top: 355px;" src="Images/coverblue.png"/>
-<img id="can4-13" style="position: absolute; left: 300px; top: 375px;" src="Images/coverblue.png"/>
-<img id="can4-2" style="position: absolute; left: 300px; top: 195px;" src="Images/hookgauge4.png"/>
+<img id="can4-1" style="position: absolute; left: -20px; top: 125px;" src="Images/1.1.png"/>
+<img id="can4-5" style="position: absolute; left: 250px; top: 355px;" src="Images/coverblue.png"/>
+<img id="can4-13" style="position: absolute; left: 250px; top: 375px;" src="Images/coverblue.png"/>
+<img id="can4-2" style="position: absolute; left: 250px; top: 195px;" src="Images/hookgauge4.png"/>
 
-<img id="can4-3" style="position: absolute; left: 345px; top: 109px;" src="Images/hookgauge2.png"/>
+<img id="can4-3" style="position: absolute; left: 295px; top: 109px;" src="Images/hookgauge2.png"/>
 
-<img id="can4-4" style="position: absolute; left: 300px; top: 45px;" src="Images/cover2.png"/>
+<img id="can4-4" style="position: absolute; left: 250px; top: 45px;" src="Images/cover2.png"/>
 
-<img id="can4-6" style="position: absolute; left: 300px; top: 375px;" src="Images/cover.png"/>
+<img id="can4-6" style="position: absolute; left: 250px; top: 375px;" src="Images/cover.png"/>
 
-<img id="can4-7" style="position: absolute; left: 190px; top: 257px;cursor:crosshair;" src="Images/nob.png"/>
+<img id="can4-7" style="position: absolute; left: 170px; top: 257px;cursor:crosshair;" src="Images/nob.png"/>
 
-<p id="can4-9" style="position:absolute;top: 260px; left:420px"> Initial reading (water level till crest) = 5.87 cm</p>
-<p id="can4-10" style="position:absolute;top: 290px; left:420px"> Final reading = </p>
-<p id="can4-11" style="position:absolute;top: 320px; left:420px"> Head of water =  </p>
-<p id="can4-12" style="position:absolute;top:350px; left:420px"> Actual  discharge, Q<sub>act</sub> =  </p>
+<p id="can4-9" style="position:absolute;top: 220px; left:370px;"> Initial reading (water level till crest) = 5.87 cm</p>
+
+<p id="can4-10" style="position:absolute;top: 260px; left:370px; visibility:hidden;"> Final reading = </p>
+
+<div class="tooltip" style="position:absolute; top: 300px; left:370px; visibility:hidden;">
+	<p id="can4-11" >Head of water, h =  </p>
+	<span id="fcan4-11" class="tooltiptext" >Head of water, h(cm) = Final reading - Initial reading</span>
+</div> 
+
+<div class="tooltip" style="position:absolute; top: 340px; left:370px; visibility:hidden;">
+	<p id="can4-12" >Actual discharge, Q<sub>act</sub> =  </p>
+	<span id="fcan4-12" class="tooltiptext" ><p>Q<sub>act</sub> = 14.17 &times; h<sup><sup><sup><span class="frac"><sup>5</sup><span>&frasl;</span><sub>2</sub></sup></sup></sup></span></p></span>
+</div>
 </div>
 
 
 <!--Step5	-->	
 <div class="simsubscreen" id="canvas5" style="visibility:hidden">
-<strong class="incanvas" style="position:absolute;top: 30px; left:50px" ><h2>Observation</h2></strong>
+<strong class="incanvas" style="position:absolute;top: 10px; left:50px" ><h2>Observation</h2></strong>
 
-<p id="can6-1" style="position:absolute;top: 80px; left:220px">  Length of the collecting tank = 70 cm  </p>
-<p id="can6-2" style="position:absolute;top: 110px; left:220px"> Breadth of the collecting tank = 50 cm  </p>
-<p id="can6-3" style="position:absolute;top: 140px; left:220px"> Angle of V-notch = 90 &deg;  </p>
-<p id="can6-4" style="position:absolute;top: 170px; left:220px"> Co-efficient of discharge for V-notch = 0.6  </p>
+<p id="can6-1" style="position:absolute;top: 60px; left:100px;">  Length of the collecting tank = 70 cm  </p>
+<p id="can6-2" style="position:absolute;top: 90px; left:100px;"> Breadth of the collecting tank = 50 cm  </p>
+<p id="can6-3" style="position:absolute;top: 120px; left:100px;"> Length of rectangular notch, L = 15.1 cm </p>
+<p id="can6-4" style="position:absolute;top: 150px; left:100px;"> Number of end contractions, n = 2 </p>
+<p id="can6-9" style="position:absolute;top: 180px; left:100px;"> Angle of V-notch = 90&deg;  </p>
+<p id="can6-6" style="position:absolute;top: 210px; left:100px;"> Co-efficient of discharge for V-notch = 0.6  </p>
+<p id="can6-7" style="position:absolute;top: 240px; left:100px;"> </p>
+<p id="can6-8" style="position:absolute;top: 270px; left:100px;"> </p>
 
+<strong class="incanvas" style="position:absolute;top: 300px; left:50px" ><h2>Result</h2></strong>
 
-<strong class="incanvas" style="position:absolute;top: 220px; left:50px" ><h2>Result</h2></strong>
-
-<p id="can6-5" style="position:absolute;top: 270px; left:220px"> Coefficient of discharge, C<sub>d</sub> =  </p>
+<div style="position:absolute; top: 350px; left:100px;">
+	<p>Coefficient of discharge, C<sub>d</sub> = <span class="frac"><sup>Q<sub>act</sub></sup><span>&frasl;</span><sub>Q<sub>th</sub></sub></span> = <span id="can6-5"></span></p>
+</div>
 
 </div>
 
@@ -173,6 +186,6 @@ var values=[[4.6,13.36,8.76,5.87,17.45,11.58,13.348,6466.08,10219.52,0.6327],
 <!--Blinking Arrow	-->	
 <img class ="" id="arrow1" style="visibility:hidden" src="Images/arrow1.png"/>
 
-<div id="copyright"> &copy; 2016 SOLVE - The Virtual Lab @ NITK Surathkal, Department of Applied Mechanics & Hydraulics</div>
+<div id="copyright"> &copy; 2016 - 2020 SOLVE - The Virtual Lab @ NITK Surathkal, Department of Applied Mechanics & Hydraulics</div>
 </body>
 </html>
