--- a/src/lab/images/simulation/venturi/index.html
+++ b/src/lab/images/simulation/venturi/index.html
@@ -4,17 +4,18 @@
 <meta charset="UTF-8">
 
 <title>SOLVE</title>
-<link rel="stylesheet" href="venturi.css" />
-<link rel="stylesheet" type="text/css" href="csshake.min.css">
+<link rel="stylesheet" href="css/venturi.css" />
+<!-- <link rel="stylesheet" type="text/css" href="csshake.min.css">
 <link rel="stylesheet" type="text/css" href="http://csshake.surge.sh/csshake.min.css">
-<link rel="stylesheet" type="text/css" href="http://csshake.surge.sh/csshake-vertical.min.css">
+<link rel="stylesheet" type="text/css" href="http://csshake.surge.sh/csshake-vertical.min.css"> -->
 <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>  -->
 <!-- <script type="text/javascript" src= "jquery-1.7.1.min.js"></script> -->
-<script type="text/javascript" src= "jquery-2.1.4.js"></script>
-<script type="text/javascript" src= "venturi.js"></script>
-<script type="text/javascript" src= "ej.web.all.js"></script>
+<script type="text/javascript" src= "js/jquery-2.1.4.js"></script>
+<script type="text/javascript" src= "js/venturi.js"></script>
+<script type="text/javascript" src= "js/ej.web.all.js"></script>
 <!-- <script type="text/javascript" src="/assets/script/canvasjs.min.js"></script> -->
-
+<!--Stylesheet to display Math functions -->
+<link href="css/mathstyle.css" rel="stylesheet" />
 <script>
 var simsubscreennum=0;
 var temp=0;
@@ -71,9 +72,7 @@ var mano20=[[55.2,53,50.8,48.6,46.4,44.2,42],
 <h4 class="incanvas" style="font-family:verdana;">Apparatus used:</h4>
 <p class="incanvas" style="font-family:verdana; font-size:14px;" >Venturimeter, differential manometer, collecting tank, piezometer, stopwatch, measuring scale.</p>
 <img id="" style="position: absolute; left: 55px; top: 96px;" src="images/1.png"/>
-
 </div>
-
 
 
 
@@ -107,7 +106,7 @@ Select the Pipe of required diameter:
 <!--Step2	-->	
 
  <div class="simsubscreen" id="canvas2" style="visibility:hidden"> 
- <strong id="titlestep" class="incanvas">STEP &nbsp;</strong> 
+ <strong id="titlestep" class="incanvas">STEP</strong> 
  <span class="circlebg" id="stepnumber">&nbsp;2&nbsp;</span>
  <p id="pumptext-2" class="steptext" style="font-family:verdana; font-size:14px;">&nbsp;The main inlet valve is opened to allow water to flow through the selected diameter pipe. Open the pipe valve, and change the knot of manometer from isolate position to air-vent position to remove the air inside the pipe.</p> 
  <img id="2a" style="position: absolute; left: 15px; top: 96px;" src="images/2a.png"/>
@@ -146,7 +145,7 @@ Select the Pipe of required diameter:
  
  <!-- step3 -->
  <div class="simsubscreen" id="canvas3" style="visibility:hidden"> 
- <strong id="titlestep" class="incanvas">STEP &nbsp;</strong> 
+ <strong id="titlestep" class="incanvas">STEP</strong> 
  <span class="circlebg" id="stepnumber">&nbsp;3&nbsp;</span>
  <p id="pumptext-2" class="steptext" style="font-family:verdana; font-size:14px;">&nbsp;The knob is then kept in the read position and note down the manometer reading. </p> 
  <!-- <img id="3a" style="position: absolute; left: 15px; top: 96px;" src="images/2a.png"/> -->
@@ -186,14 +185,18 @@ Select the Pipe of required diameter:
  
  <p id="lw" style="position: absolute; left: 500px; top: 370px;font-family:verdana;font-size:14px;"></p>
  <p id="rw" style="position: absolute; left: 500px; top: 420px;font-family:verdana;font-size:14px;"></p>
- <p id="rlh" style="position: absolute; left:420px; top: 470px;font-family:verdana;font-size:14px;"></p>
+ <div class="tooltip" style="position:absolute;left:420px; top: 470px;">
+    <p id="rlh" style="font-family:verdana;font-size:14px;"></p>
+    <span class="tooltiptext">H(cm) = 12.6 x (LL - RL)</span>
+</div>
+ <!-- <p id="rlh" style="position: absolute; left:420px; top: 470px;font-family:verdana;font-size:14px;"></p> -->
 
  </div>
 
  
 <!--Step4	-->	
 <div class="simsubscreen" id="canvas4" style="visibility:hidden">
-<strong class="incanvas">STEP &nbsp;</strong><span class="circlebg">&nbsp;4&nbsp;</span>
+<strong class="incanvas">STEP</strong><span class="circlebg">&nbsp;4&nbsp;</span>
 <p class="steptext" style="font-family:verdana; font-size:14px;">&nbsp;Water is now allowed to flow through the selected venturimeter and this flow is made constant. At this flow rate the difference in pressure between inlet and throat is measured.</p>
 <img id="flow450" style="position: absolute; left: 15px; top: 96px;visibility:hidden" src="images/f50.png"/>
 <img id="flow440" style="position: absolute; left: 15px; top: 96px;visibility:hidden" src="images/f40.png"/>
@@ -224,7 +227,7 @@ Select the Pipe of required diameter:
 
 <!--Step5	-->	
 <div class="simsubscreen" id="canvas5" style="visibility:hidden;">
-<strong class="incanvas">STEP &nbsp;</strong><span class="circlebg">&nbsp;5&nbsp;</span>
+<strong class="incanvas">STEP</strong><span class="circlebg">&nbsp;5&nbsp;</span>
 <p class="steptext" style="font-family:verdana; font-size:14px;" >&nbsp;The exit valve of the collecting tank is closed and time taken for the tank water to rise by 5cm is noted.</p>
 
 <img id="flow550" style="position: absolute; left: 15px; top: 96px;visibility:hidden" src="images/flow50.png"/>
@@ -262,19 +265,39 @@ Select the Pipe of required diameter:
  
 <!--Step6	-->	
 <div class="simsubscreen" id="canvas6" style="visibility:hidden">
-<strong id="step6" class="incanvas">STEP &nbsp;</strong>
+<!-- <strong id="step6" class="incanvas">STEP &nbsp;</strong>
 <span class="circlebg" id="six">&nbsp;6&nbsp;</span>
-<p  id="step6-1" class="steptext" style="font-family:verdana; font-size:14px;">Observations and Calculations:</p>
-<img id="qth" style="position:absolute;left: 80px; top: 50px;font-family:verdana;font-size:14px;" src="images/qth.png"/>
-<p id="70" style="position:absolute;left: 80px; top: 120px;font-family:verdana;font-size:14px;"></p>
-<p id="70a" style="position:absolute;left: 80px; top: 160px;font-family:verdana;font-size:14px;"></p>
-<p id="70b" style="position:absolute;left: 80px; top: 200px;font-family:verdana;font-size:14px;">Area of collecting tank(A)&nbsp;=&nbsp;6750cm<sup>2</sup> </p>
-<p id="71" style="position:absolute;left: 80px; top: 280px;font-family:verdana;font-size:14px;">Rise (h)= 5cm</p>
-<p id="72" style="position:absolute;left: 80px; top: 320px;font-family:verdana;font-size:14px;">Time taken(t)=  </p>
-<p id="73" style="position:absolute;left: 80px; top: 240px;font-family:verdana;font-size:14px;">Head Loss(h<sub>l</sub>= (12.6*(LL-RL)))= </p>
-<p id="74" style="position:absolute;left: 80px; top: 360px;font-family:verdana;font-size:14px;">Q<sub>act</sub>=</p>
-<p id="75" style="position:absolute;left: 80px; top:400px;font-family:verdana;font-size:14px;">Q<sub>th</sub>=</p>
-<p id="76" style="position:absolute;left: 80px; top: 440px;font-family:verdana;font-size:14px;">C<sub>d</sub>=</p>
+<p  id="step6-1" class="steptext" style="font-family:verdana; font-size:14px;">Observations and Calculations:</p> -->
+<!-- <img id="qth" style="position:absolute;left: 80px; top: 50px;font-family:verdana;font-size:14px;" src="images/qth.png"/> -->
+<strong class="incanvas" style="position:absolute;top: 10px; left:50px;font-family: verdana;"><h2>Observations</h2></strong>
+<p id="70c" style="position:absolute;left: 210px; top: 60px;font-family:verdana;font-size:14px;">d1</p>
+<p id="70d" style="position:absolute;left: 210px; top: 90px;font-family:verdana;font-size:14px;">d2</p>
+<p id="70" style="position:absolute;left: 210px; top: 120px;font-family:verdana;font-size:14px;">A1</p>
+<p id="70a" style="position:absolute;left: 210px; top: 150px;font-family:verdana;font-size:14px;">A2</p>
+<p id="70b" style="position:absolute;left: 210px; top: 180px;font-family:verdana;font-size:14px;">Area of collecting tank (A)&nbsp;=&nbsp;6750cm<sup>2</sup> </p>
+<p id="71" style="position:absolute;left: 210px; top: 210px;font-family:verdana;font-size:14px;">Rise (h)= 5cm</p>
+<p id="72" style="position:absolute;left: 210px; top: 240px;font-family:verdana;font-size:14px;">Time taken (t)=  </p>
+<p id="73" style="position:absolute;left: 210px; top: 270px;font-family:verdana;font-size:14px;">Head Loss (H)= </p>
+<p id="73g" style="position:absolute;left: 210px; top: 300px;font-family:verdana;font-size:14px;">Acceleration due to gravity (g) = 981 cm/sec<sup>2</sup> </p>
+<strong class="incanvas" style="position:absolute;top: 330px; left:50px;font-family: verdana;"><h2>Calculations</h2></strong>
+<div class="tooltip" style="position:absolute;left: 210px; top: 370px;">
+    <p id="74" style="font-family:verdana;font-size:14px;"></p>
+    <!-- <span class="tooltiptext">Q<sub>act</sub> (cm<sup>3</sup>/sec) = (Axh/t)</span> -->
+    <span class="tooltiptext">Q<sub>act</sub> (cm<sup>3</sup>/sec)= <span class="frac"><sup>A x h</sup><span>&frasl;</span><sub>t</sub></span></span>
+</div>
+<div class="tooltip" style="position:absolute;left: 210px; top:410px;">
+    <p id="75" style="font-family:verdana;font-size:14px;"></p>
+    <!-- <span class="tooltiptext">Q<sub>th</sub> (cm<sup>3</sup>/sec) = (A<sub>1</sub> * A<sub>2</sub> * &sqrt;(2*g*H))/(&sqrt;(A<sub>1</sub><sup>2</sup>) - A<sub>2</sub><sup>2</sup>))</span> -->
+    <span class="tooltiptext">Q<sub>th</sub> (cm<sup>3</sup>/sec) = <span class="frac"><sup>A<sub>1</sub> x A<sub>2</sub> x &radic;(2gH)</sup><span>&frasl;</span><sub>&radic;(A<sub>1</sub><sup>2</sup> - A<sub>2</sub><sup>2</sup>)</span></span>
+</div>
+<div class="tooltip" style="position:absolute;left: 210px; top: 450px;">
+    <p id="76" style="font-family:verdana;font-size:14px;"></p>
+    <!-- <span class="tooltiptext">C<sub>d</sub> = Q<sub>act</sub> / Q<sub>th</sub></span> -->
+    <span class="tooltiptext">C<sub>d</sub> = <span class="frac"><sup>Q<sub>act</sub></sup><span>&frasl;</span><sub>Q<sub>th</sub></span></span>
+</div>
+<!-- <p id="74" style="position:absolute;left: 210px; top: 360px;font-family:verdana;font-size:14px;">Q<sub>act</sub>=</p>
+<p id="75" style="position:absolute;left: 210px; top:400px;font-family:verdana;font-size:14px;">Q<sub>th</sub>=</p>
+<p id="76" style="position:absolute;left: 210px; top: 440px;font-family:verdana;font-size:14px;">C<sub>d</sub>=</p> -->
 
 </div>
 
@@ -322,6 +345,6 @@ Select the Pipe of required diameter:
 
 
 
-<div id="copyright"> &copy; 2016 SOLVE - The Virtual Lab @ NITK Surathkal, Department of Applied Mechanics & Hydraulics</div>
+<div id="copyright"> &copy; 2016-2020 SOLVE - The Virtual Lab @ NITK Surathkal, Department of Applied Mechanics & Hydraulics</div>
 </body>
 </html>
