--- a/src/lab/exp1/content.html
+++ b/src/lab/exp1/content.html
@@ -180,7 +180,7 @@ display: flex;
 			<p><center><img src="../images/VNotch_5.PNG"style = "width:802px; height:602px;"></img></center></p></br>
 			</li>
 			
-			<li> Note the head of water, theoretical discharge and click the next button.</br>
+			<li> Calculate head of water and theoretical discharge. Then click the next button.</br>
 			<p><center><img src="../images/VNotch_6.PNG"style = "width:802px; height:602px;"></img></center></p></br>
 			</li>
 			
@@ -188,7 +188,7 @@ display: flex;
 			<p><center><img src="../images/VNotch_7.PNG"style = "width:802px; height:602px;"></img></center></p></br>
 			</li>
 			
-			<li> Note the actual discharge of V-notch from collecting tank and click on the next button.</br>
+			<li> Calculate actual discharge of V-notch and click on the next button.</br>
 			<p><center><img src="../images/VNotch_8.PNG"style = "width:802px; height:602px;"></img></center></p></br>
 			</li>
 			
