--- a/src/lab/exp2/content.html
+++ b/src/lab/exp2/content.html
@@ -217,16 +217,16 @@ display: flex;
 						<li>Note the initial reading of the hook gauge and click on the hook gauge.</li></br>
 						<p><center><img src="../images/RNotch_5.PNG"style =" width:802px; height:602px;"></img></center></p></br>
 
-						<li>Note the head of water, theoretical discharge of rectangular notch and click the next button.</li></br>
+						<li>Calculate head of water, theoretical discharge of rectangular notch and click the next button.</li></br>
 						<p><center><img src="../images/RNotch_6.PNG"style =" width:802px; height:602px;"></img></center></p></br>
 
 						<li>Note the initial reading of the hook gauge and click on the hook gauge.</li></br>
 						<p><center><img src="../images/RNotch_7.PNG"style =" width:802px; height:602px;"></img></center></p></br>
 
-						<li>Note the head of water, actual discharge of V-notch and click the next button.</li></br>
+						<li>Calculate head of water, actual discharge of V-notch and click the next button.</li></br>
 						<p><center><img src="../images/RNotch_8.PNG"style =" width:802px; height:602px;"></img></center></p></br>
 
-						<li>Note the coefficient of discharge for rectangular notch.</li></br>
+						<li>Calculate coefficient of discharge for rectangular notch.</li></br>
 						<p><center><img src="../images/RNotch_9.PNG"style ="width:802px; height:602px;"></img></center></p></br>
 
 						<li>Repeat the same procedure, after certain trials, click on the red button to stop the pump.</li></br>
