--- a/src/lab/exp4/content.html
+++ b/src/lab/exp4/content.html
@@ -174,10 +174,10 @@ display: flex;
 						<li>Now click on tank outlet valve to open and allow flow, note the manometer reading.</li></br>
 						<p><center><img src="../images/friction_6.PNG"style =" width:802px; height:602px;"></img></center></p></br>
 
-						<li>Here click on tank outlet valve to close to measure the discharge.</li></br>
+						<li>Here click on tank outlet valve to close and then calculate Head Loss value.</li></br>
 						<p><center><img src="../images/friction_7.PNG"style =" width:802px; height:602px;"></img></center></p></br>
 
-						<li>The observation and calculations of the trial is given here.</li></br>
+						<li>Calculate the discharge, velocity and analytical friction factor with the help the observation given here.</li></br>
 						<p><center><img src="../images/friction_8.PNG"style =" width:802px; height:602px;"></img></center></p></br>
 
 						<li>Repeat the same procedure for other trials.</li></br>
