--- a/src/lab/exp5/content.html
+++ b/src/lab/exp5/content.html
@@ -194,7 +194,7 @@ display: flex;
 						<li>Click on manometer knot to change it from isolated position to air-vent position to remove air bubbles and again click to change it to read position.</li></br>
 						<p><center><img src="../images/venturi_5.PNG"style =" width:802px; height:602px;"></img></center></p></br>
 
-						<li>Here the manometer reading is noted down.</li></br>
+						<li>Here the manometer reading is noted down. The calculate the value of Head Loss.</li></br>
 						<p><center><img src="../images/venturi_6.PNG"style =" width:802px; height:602px;"></img></center></p></br>
 						
 						<li>Click on tank outlet valve to close it to measure the discharge.</li></br>
@@ -203,7 +203,7 @@ display: flex;
 						<li>The observation and calculations of the trial is given here.</li></br>
 						<p><center><img src="../images/venturi_8.PNG"style =" width:802px; height:602px;"></img></center></p></br>
 
-						<li>Repeat the same procedure for other trials.</li></br>
+						<li>Calculate actual discharge, theoretical discharge and coefficient of discharge. Repeat the same procedure for other trials.</li></br>
 						<p><center><img src="../images/venturi_9.PNG"style =" width:802px; height:602px;"></img></center></p></br>
 
 						
