--- a/src/lab/images/simulation/rectangular_notch/index.html
+++ b/src/lab/images/simulation/rectangular_notch/index.html
@@ -5,10 +5,10 @@
 
 <title>SOLVE</title>
 <link rel="stylesheet" href="rvnotch.css" />
-<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>-->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script> 
 <script type="text/javascript" src= "jquery-1.7.1.min.js"></script>
 <script type="text/javascript" src= "rvnotch.js"></script>
- <link href="mathstyle.css" rel="stylesheet" />
+<link href="mathstyle.css" rel="stylesheet" />
 
 <script>
 var simsubscreennum=0;
